USD price and best match SOR update
